# odrx-py-package

./: .gitignore  README.md  build.bat  build.sh  pyproject.toml  tests.bat  tests.sh  upload.bat  upload.sh
src/: odrx-py.py  odrx_py.py  setup.py
src/handlers/: request.py
src/objects/: beatmap.py  player.py  score.py  stats.py
src/odrx-py/classes/: __init__.py  stats.py
src/odrx-py/enums/: endpoints.py
src/odrx-py/structs/: __init__.py  client.py
src/odrx-py/utils/: request.py
src/odrx_py/: __init__.py
src/odrx_py/api/: __init__.py
src/odrx_py/classes/: __init__.py  beatmap.py  player.py  score.py
src/odrx_py/enums/: __init__.py  (+3 more)
src/tests/: get_beatmap_fromid.py  get_beatmap_frommd5.py  get_beatmap_leaderboard_fromid.py  get_beatmap_leaderboard_frommd5.py  get_leaderboard_country.py  get_leaderboard_global.py  get_leaderboard_score.py  get_leaderboard_score_country.py  get_recent_scores.py  get_scores_uid_beatmap_fromid.py  get_scores_uid_beatmap_frommd5.py  get_top_scores.py  get_user_id.py  get_user_username.py  get_whitelist.py  run_tests.py
src/utils/: __init__.py  helpers.py  parser.py
tests/: calc_pp.py  get_beatmap_fromid.py  get_beatmap_frommd5.py  get_beatmap_leaderboard_fromid.py  get_beatmap_leaderboard_frommd5.py  get_leaderboard_country.py  get_leaderboard_global.py  get_leaderboard_score.py  get_leaderboard_score_country.py  get_recent_scores.py  get_scores_uid_beatmap_fromid.py  get_scores_uid_beatmap_frommd5.py  get_top_scores.py  get_user_id.py  get_user_username.py  get_whitelist.py  run_tests.py
tests/resources/: beatmap.osu
(+10 files in other folders)
