[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "odrx_py"
version = "2.1.0"
authors = [
  { name="75efb6" }
]
description = "Python api wrapper for osu!droid relax"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }

dependencies = [
  "httpx"
]


[project.urls]
Homepage = "https://github.com/75efb6/odrx-py-package"
Issues = "https://github.com/75efb6/odrx-py-package/issues"


